--- a/visualworkflow/src/styles/index.css
+++ b/visualworkflow/src/styles/index.css
@@ -1,1 +1,6 @@
-/* No CSS *//*# sourceMappingURL=index.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
+/*# sourceMappingURL=index.css.map */
