--- a/visualworkflow/src/styles/App.css
+++ b/visualworkflow/src/styles/App.css
@@ -1,10 +1,7 @@
 .App {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 25% auto;
+      grid-template-columns: 25% auto;
 }
 /*# sourceMappingURL=App.css.map */
