--- a/visualworkflow/src/styles/compoStyles/WorkFlow.css
+++ b/visualworkflow/src/styles/compoStyles/WorkFlow.css
@@ -24,17 +24,15 @@
   margin: 12px;
 }
 
-.workflow .form div {
+.workflow .form .inputs {
   margin-left: 8px;
 }
 
 .workflow .form .functions {
   border: 1px solid grey;
   position: fixed;
-  width: 24.8%;
+  width: 22.6%;
   bottom: 0;
-  margin: 0;
-  padding-top: 3%;
-  padding-bottom: 2%;
+  padding: 3% 21px 2%;
 }
 /*# sourceMappingURL=WorkFlow.css.map */
