--- a/visualworkflow/src/styles/App.scss
+++ b/visualworkflow/src/styles/App.scss
@@ -1,5 +1,5 @@
 .App{
       display: grid;
-      grid-template-columns: 25% auto;
+      grid-template-columns: 25% auto 20%;
       height: 100%;
 }
